PR kern/40491 5.0: nfs timer can crash/break on smp

Hack around it by acquiring softnet_lock around the client-side timer loop.